--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,12 @@ CHECK24_BASE_URL=https://accounts.check24.com
 TEST_EMAIL=your-test-email@example.com
 TEST_PASSWORD=your-test-password
 
+# Microsoft Graph API für E-Mail-Zugriff (2FA TAN-Codes)
+AZURE_TENANT_ID=your-tenant-id
+AZURE_CLIENT_ID=your-client-id
+AZURE_CLIENT_SECRET=your-client-secret
+EMAIL_ACCOUNT=loyaltytesting@check24.de
+
 # Slack Integration
 SLACK_WEBHOOK_URL=https://hooks.slack.com/services/YOUR/WEBHOOK/URL
 
