Update timeout configuration and database schema
- Increase test timeout from 30s to 20 minutes (1,200,000ms)
- Allows sufficient time for login challenges with email TAN codes
- Update database CHECK constraint to support 'timeout' status
- Add deleteTestRun method for testing/cleanup purposes

Tests will now only be marked as timeout after 20 minutes instead of 30 seconds.

--- a/.env.example
+++ b/.env.example
@@ -37,5 +37,5 @@ DATABASE_PATH=./data/testresults.db
 CLEANUP_DAYS=4
 
 # Timeouts (in Millisekunden)
-DEFAULT_TIMEOUT=30000
+DEFAULT_TIMEOUT=1200000      # 20 Minuten (für Tests mit Login-Challenge/E-Mail-Abruf)
 NAVIGATION_TIMEOUT=60000
