Implement multi-account system and clarify Login Challenge vs 2FA
Major improvements for account management and terminology:

1. Multi-Account System:
   - New centralized account management in tests/fixtures/accounts.ts
   - TypeScript-based with full type safety
   - Scalable: Easy to add unlimited test accounts
   - Feature-based filtering (email, phone, login_challenge, two_factor, etc.)
   - Helper functions: getAccount(), getAccountCredentials(), getAccountsByFeature()
   - Comprehensive documentation in tests/fixtures/README.md

2. Account Configuration:
   - Account 1 (EMAIL_ONLY): loyaltytesting+automatedtesting1@check24.de
   - Account 2 (EMAIL_PHONE): loyaltytesting+automatedtestingcombinedaccount@check24.de
   - Passwords managed via environment variables (TEST_PASSWORD_ACCOUNT_1/2)
   - .env.example updated with clear comments

3. Critical Terminology Fix - Login Challenge ≠ 2FA:
   - Login Challenge: Security check on unknown device/incognito (always happens)
   - 2FA: Two-Factor Authentication (only if enabled in account settings)
   - Updated all code, comments, and documentation to reflect this distinction
   - New feature flag: 'login_challenge' separate from 'two_factor'

4. Updated Files:
   - tests/login/password-happy-path.spec.ts: Uses new account system
   - tests/helpers/auth.ts: Clarified comments (Login Challenge, not 2FA)
   - tests/helpers/email.ts: Updated warnings and documentation
   - src/api/server.ts: Test description now says "Login Challenge"
   - README.md: Added distinction between Login Challenge and 2FA
   - .env.example: Clear comments about the difference

Benefits:
- Scalable account management for different test scenarios
- Clear separation between device security (Login Challenge) and optional 2FA
- Type-safe account configuration
- Easy to add new accounts with specific features
- Comprehensive documentation for team members

--- a/.env.example
+++ b/.env.example
@@ -3,9 +3,20 @@
 # Base URL für CHECK24 Login
 CHECK24_BASE_URL=https://accounts.check24.com
 
-# Test-Account Zugangsdaten
+# Test-Account Zugangsdaten (Legacy - für Rückwärtskompatibilität)
 TEST_EMAIL=your-test-email@example.com
 TEST_PASSWORD=your-test-password
+
+# Multi-Account System - Passwörter für verschiedene Test-Accounts
+# WICHTIG: Login Challenge ≠ 2FA
+# - Login Challenge: Sicherheitsprüfung bei unbekanntem Gerät (kommt immer)
+# - 2FA: Nur wenn in Account-Einstellungen aktiviert (optional)
+
+# Account 1: Nur E-Mail, Login Challenge (loyaltytesting+automatedtesting1@check24.de)
+TEST_PASSWORD_ACCOUNT_1=your-password-account-1
+
+# Account 2: E-Mail + Telefon, Login Challenge (loyaltytesting+automatedtestingcombinedaccount@check24.de)
+TEST_PASSWORD_ACCOUNT_2=your-password-account-2
 
 # Microsoft Graph API für E-Mail-Zugriff (2FA TAN-Codes)
 AZURE_TENANT_ID=your-tenant-id
