Implementiere Netzwerk-Zugriff für Server-Setup
- Server lauscht jetzt auf 0.0.0.0 (alle Netzwerk-Interfaces)
- Next.js Frontend auf 0.0.0.0 für Netzwerk-Zugriff
- Konfigurierbare API_HOST und NEXT_PUBLIC_API_HOST Variablen
- Neue NETWORK_SETUP.md mit kompletter Anleitung
- Client-Rechner können nun ohne Installation zugreifen
- Unterstützt lokales Netzwerk-Setup für 24/7 Server

Von anderen Rechnern erreichbar unter: http://<SERVER-IP>:3000

--- a/.env.example
+++ b/.env.example
@@ -31,6 +31,14 @@ SLACK_WEBHOOK_URL=https://hooks.slack.com/services/YOUR/WEBHOOK/URL
 DASHBOARD_BASE_URL=http://localhost:3000
 API_PORT=4000
 
+# Netzwerk-Konfiguration (für Server im lokalen Netzwerk)
+# API_HOST=0.0.0.0 macht den Server im Netzwerk erreichbar
+# API_HOST=localhost macht den Server nur lokal erreichbar
+API_HOST=0.0.0.0
+
+# Next.js API-Proxy Host (normalerweise localhost, da Next.js als Proxy fungiert)
+NEXT_PUBLIC_API_HOST=localhost
+
 # 24/7 Monitoring
 # Test-Intervall in Minuten (z.B. 15 = alle 15 Minuten)
 TEST_INTERVAL_MINUTES=15
