--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
     "test:playwright": "playwright test",
     "test:login": "playwright test tests/login",
     "test:headed": "playwright test --headed",
-    "dev:web": "next dev -p 3000 -H 0.0.0.0",
+    "dev:web": "next dev -p 3000",
     "build:web": "next build",
-    "start:web": "next start -p 3000 -H 0.0.0.0",
+    "start:web": "next start -p 3000",
     "dev:worker": "tsx watch src/worker/index.ts",
     "start:worker": "tsx src/worker/index.ts",
     "dev:api": "tsx watch src/api/server.ts",
